# mottak

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  azure-pipelines.yml  buildspec.yml  cloudbuild.yaml
argo/: README.md  argo-cleanup.sh  argo-inside-pods.yaml  dag-example-four-containers.yaml  kube-config-for-artifacts.txt  mottak-DAG.yaml  submit.sh
argo-kicker/: Dockerfile  README.md  kicker.py  l2.py  listener.py  pyproject.toml  s2.py  sender.py  start.sh
argo-kicker/workflows/: submit-archive.yaml
arkade5/: Dockerfile  README.md  get-mets.py  run.sh  start.sh
artifact-logger/: Dockerfile  README.md  logger.py  pyproject.toml  start.sh
azure-pipelines/: README.md  build.yaml  deploy.yaml  main.yaml  package.yaml
exporter/: Dockerfile  README.md  exporter.py  pyproject.toml
fix-chart-later/tusd/: values.yaml
fix-later/s3-rename/: values.yaml
helm/mottak/: Chart.yaml  values.yaml
infra/: README.md  azuread.tf  create  create-cluster  main.tf
infra/azure/: azuread.tf  container_registry.tf  create-cluster  kubernetes.tf  main.tf  terraform-remote-state  vars.tf
infra/cluster/: README.md  database.tf  kubernetes.tf  main.tf  secrets.tf  vars.tf
infra/windows-vm/: create-vm  fileshare.tf  main.tf  network.tf  vars.tf  vm.tf
invitation/: .editorconfig  README.md  composer.json  start.sh
invitation/app/: bootstrap.php  init.php
invitedb/: README.md  create_db.sql
k8s/: .gitignore  argo-artifacts.yaml  create-gcs-secret.sh  create-s3-secrets.sh  invitation-deployment.yaml  invitation-service.yaml  kustomization.yaml  mottak-deployment.yaml  mottak-service.yaml  patches-template.yaml  patches.yaml  tusd-deployment.yaml  tusd-service.yaml
k8s/argo/: argo-artifacts.yaml
k8s/external-dns/: rbac-deployment.yaml
k8s/ingress/: mottak-ingress.yaml
k8s/invitation/: invitation-deployment.yaml  invitation-service.yaml
k8s/kubeless/: README.md  deploy-and-test.sh  hello.py  log-message.json
k8s/load-secrets/: .gitignore  README.md  create-dbstring-secret.sh  create-invitation-secrets.sh  create-mailgun-secrets.sh  create-route53-secrets.sh  create-s3-secrets.sh  load-tls-keys.sh
k8s/tusd/: tusd-deployment.yaml  tusd-service.yaml
kicker/: Dockerfile  README.md  requirements.txt  submission-test.py  workflows.json
libcloud-testing/: test.py
log/: pyproject.toml
log-ingest/: Dockerfile  README.md  main.py  prestart.sh  requirement.txt  requirements.txt  test_main.py
log/app/: main.py  test_main.py
log/tests/: test_log.py
mailer/: Dockerfile  README.md  mailer.py  mailgun-status.py  requirements.txt
mottak/: Dockerfile  deployment.yaml  start.sh  vhost.conf
persistent-demo/: README.md  hello-world-pod.yaml  service.yaml
s3-checksum256/: Dockerfile  README.md  pyproject.toml  requirements.txt  s3-checksum256.py
s3-delete/: Dockerfile  README.md  pyproject.toml  s3-delete.py
s3-rename/: Dockerfile  s3-rename.py
s3-scan/: Dockerfile  requirements.txt  s3-avscan.py  start.sh
s3-scan-ng/: Dockerfile  s3-scan-tar.py  start.sh
s3-scan-tar/: Dockerfile  Dockerfile.alpine  README.md  pyproject.toml  requirements.txt  s3-scan-tar.py  start.sh
s3-tar-converter1/: Dockerfile  README.md  s3-tar-converter1.py  start.sh
s3-tar-converter2/: README.md  generate-tar.py  upload-tar.py
s3-unpack/: Dockerfile  README.md  pyproject.toml  s3-unpack.py  start.sh
siegfried/: Dockerfile  start.sh
tusd/: Dockerfile  README.md  argo-mottak-DAG.yaml  build-upload-url.py  deployment.yaml  ingress.yaml  service.yaml  service2.yaml  start.sh
(+146 files in other folders)
